Solve bug in search with too long names

--- a/app/styles/_search.scss
+++ b/app/styles/_search.scss
@@ -32,6 +32,7 @@
     display: inline-block;
     background-color: #333;
     position: relative;
+    overflow: hidden;
 
     a {
       @include size(100%);
@@ -48,6 +49,11 @@
         color: #555;
         text-decoration: none;
         line-height: 1.4;
+
+        @media #{$media-query-phone} {
+          font-size: 12px;
+          padding-top: 10px;
+        }
       }
 
       img {
